--- a/advisor.html
+++ b/advisor.html
@@ -90,7 +90,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid d-flex justify-content-between align-items-center">
             <a class="navbar-brand d-flex align-items-center">
-                <img src="img/advisor.png" alt="Advisor Icon" class="profile-pic">
+                <img src="advisor.png" alt="Advisor Icon" class="profile-pic">
                 Personal Budget Tracker
             </a>
             <span class="navbar-text mx-auto text-white fw-bold">Advisor Dashboard</span>
@@ -108,23 +108,23 @@
     <div class="container mt-4">
         <div class="dashboard-buttons">
             <a href="messages.html" class="dashboard-button">
-                <img src="img/email.png" alt="Messages">
+                <img src="email.png" alt="Messages">
                 <h3>Send Messages</h3>
             </a>
             <a href="reports.html" class="dashboard-button">
-                <img src="img/report.png" alt="Reports">
+                <img src="report.png" alt="Reports">
                 <h3>Generate Reports</h3>
             </a>
             <a href="graphs.html" class="dashboard-button">
-                <img src="img/graphs.png" alt="Graphs">
+                <img src="graphs.png" alt="Graphs">
                 <h3>View Graphs</h3>
             </a>
             <a href="public-board.html" class="dashboard-button">
-                <img src="img/board.png" alt="Public Board">
+                <img src="board.png" alt="Public Board">
                 <h3>Check Public Board</h3>
             </a>
             <a href="advisor-board.html" class="dashboard-button">
-                <img src="img/publish.png" alt="Publish">
+                <img src="publish.png" alt="Publish">
                 <h3>Publish</h3>
             </a>
         </div>
