--- a/welcompage.html
+++ b/welcompage.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Personal Budget Tracker</title>
-    <link rel="icon" href="img/walletIcon.jpg">
+    <link rel="icon" href="walletIcon.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"> <!-- For Icons -->
     <style>
@@ -38,7 +38,7 @@
         position: relative;
         width: 100%;
         height: calc(100% - 56px); /* Full height minus navbar height */
-        background-image: url('img/background.jpeg'); /* Background image */
+        background-image: url('background.jpeg'); /* Background image */
         background-size: cover;
         background-position: center;
         display: flex;
@@ -112,7 +112,7 @@
       <div class="container-fluid">
         <!-- Brand with Image -->
         <a class="navbar-brand d-flex align-items-center">
-          <img src="img/walletIcon.jpg" alt="Profile Picture" class="profile-pic">
+          <img src="walletIcon.jpg" alt="Profile Picture" class="profile-pic">
           Personal Budget Tracker
         </a>
         <!-- Toggler for mobile view -->
@@ -140,7 +140,7 @@
       <!-- Content -->
       <div class="header-content">
         <!-- Image on the left -->
-        <img src="img/walletIcon.jpg" alt="Header Icon" class="header-icon">
+        <img src="walletIcon.jpg" alt="Header Icon" class="header-icon">
         <!-- Text on the right -->
         <div class="header-text">
           <div class="header-title">Manage Your<br> Expenses Easily With<br>Personal Budget Tracker</div>
