--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Personal Budget Tracker</title>
-    <link rel="icon" href="img/walletIcon.jpg">
+    <link rel="icon" href="walletIcon.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"> <!-- For Icons -->
     <style>
@@ -12,7 +12,7 @@
       body {
         margin: 0; /* Ensure no margins */
         padding-top: 0; /* No padding above */
-        background-image: url('img/background.jpeg'); /* Set background image for the page */
+        background-image: url('background.jpeg'); /* Set background image for the page */
         background-size: cover;
         background-position: center;
         background-attachment: fixed; /* Keeps the background fixed while scrolling */
@@ -87,7 +87,7 @@
       <div class="container-fluid">
         <!-- Brand with Image -->
         <a class="navbar-brand d-flex align-items-center">
-          <img src="img/walletIcon.jpg" alt="Profile Picture" class="profile-pic">
+          <img src="walletIcon.jpg" alt="Profile Picture" class="profile-pic">
           Personal Budget Tracker
         </a>
         <!-- Toggler for mobile view -->
