--- a/adminPage.html
+++ b/adminPage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
-    <link rel="icon" href="img/walletIcon.jpg">
+    <link rel="icon" href="walletIcon.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -147,7 +147,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid d-flex justify-content-between align-items-center">
             <a class="navbar-brand d-flex align-items-center">
-                <img src="img/walletIcon.jpg" alt="Profile Picture" class="profile-pic">
+                <img src="walletIcon.jpg" alt="Profile Picture" class="profile-pic">
                 Personal Budget Tracker
             </a>
             <span class="navbar-text mx-auto text-white fw-bold">Admin Dashboard</span>
