--- a/resetPassword.html
+++ b/resetPassword.html
@@ -55,7 +55,7 @@
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="img/walletIcon.jpg" alt="Logo" style="width: 30px; height: 30px;" class="rounded-circle">
+                <img src="walletIcon.jpg" alt="Logo" style="width: 30px; height: 30px;" class="rounded-circle">
                 Personal Budget Tracker
             </a>
             <ul class="navbar-nav">
