--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a class="nav-link active" href="welcompage.html"><i class="fas fa-home"></i> Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" onclick="showAbout()"><i class="fas fa-circle-question"></i> About</a>
+            <a class="nav-link active" href="about.html"><i class="fas fa-circle-question"></i> About</a>
           </li>
         </ul>
       </div>
